adding section on how to build Q matrix and assess parameter identifiability in supps

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -428,9 +428,13 @@ The authors declare no competing interests.
     We make the several observations in addition to comments in the code. Firstly, identifiable interactions (beta\_ij in the code) are defined as a vector, which must then be matched to their correct position in the interaction matrix. This is the role of the istart, iend, icol, and irow vectors defined in the data block. Our github repository also contains the data\_prep.R file, which will show how to calculate these vectors from the input data. 
     Secondly, we impose the following constraints to improve convergence, avoid over-parameterisation and maintain identifiability of our parameters $r_{d_k}$ and $e_j$ \parencite{Huber2004, Kidzinski2020, Niku2021}. We define the effect parameters as a unit vector, which means we only require K-1 degrees of freedom (where K is the total number of neighbour elements) to estimate all effect values. This loss of a degree of freedom arises from the fact that the matrix of $r_{d_k}$ $e_j$ parameters is of rank 1. The first response parameter is also forced to positive. This improves convergence by providing an anchor for all other parameter values to 'rotate' around. Though these latter two have implications for our estimates of the latent variables $r_{d_k}$ and $e_j$, estimates for identifiable and unidentifiable interactions should not be affected.
 
-    % \includepdf[pages=-]{../joint_model.stan.pdf}
+    \subsection{Assessing parameter identifiability}
+    \label{SI:identify}
 
+    We assess which interactions parameters are identifiable in the data\_prep.R file (lines 30-44) and store this information in the $Q$ matrix. To do so, we create a model matrix $X_i$ for each focal species $i$ which is made up of a column vector of 1's (representing the intercept) and the subset of neighbour abundances recorded for that focal species (one predictor aka neighbour species per column). We transform this matrix into its row-reduced echelon form $R_i$ using the rref() function from the pracma package \parencite{Borchers2022}. EXPLAIN WHAT rref MEANS. 
+    We then multiply $R_i$ by its transpose to get the symmetric matrix $Z_i$, which we can use to determine which predictors (rows) are linearly independent of all other predictors. Note that given $Z-i$ is symmetrical, this can also be done using the columns of $Z_i$. We ignore the first row (column) of $Z_i$ because it corresponds to the intercept which we always want to include. For every row (column) $k > 1$, it is linearly independent if that row (column) is a vector of $0$'s except for the k'th element. If this is true, the interaction parameter corresponding to that row is thus identifiable and we assign it a value of $1$ in the $i$'th row and $k-1$'th column of $Q$. Alternatively, the corresponding interaction parameter is given a value of $0$ in $Q$. Evaluating the $Z_i$ matrix of each focal species therefore allows us to construct the $Q$ matrix of inferrable parameters.
 
+% We construct a matrix $Q$ of size $s \times t$, with $Q_{i, j} = 1$ if the corresponding $\beta_{i, j}$ parameter is identifiable, and $Q_{i, j} = 0$ if not.
 
     \subsection{Case study Methods}
     \label{SI:casestudy}
@@ -517,8 +521,9 @@ The authors declare no competing interests.
         This experiment was carried out on the focal species \textit{A. calendula}, \textit{G. berardiana}, \textit{H. glutinosum}, \textit{H. glabra},\textit{P. aroides}, \textit{P. debilis}, \textit{P. canescens}, \textit{T. cyanopetala}, \textit{T. ornata}, \textit{V. rosea} and \textit{W. acuminata} in 2018 and 2019. Pairs of free-draining germination trays were deployed across a gradient of canopy cover in mid-October of both years, filled with soil, which had either been collected from the field and heat-sterilised to render pre-existing seeds nonviable (2019), or simply collected from the roadside (2018). Each germination tray consisted of 24 cells, with two cells randomly assigned to each focal species. In each cell, 15 seeds of the designated focal species were broadly distributed and lightly misted with water to facilitate seed-soil contact and minimise removal by wind. Trays placed in 2018 used seeds collected at the end of the 2017 growing season and dry after-ripened at 60$^{\circ}$C for a month before being stored in cool, dry conditions at the University of Queensland. Seeds planted in 2019 were collected at the end of the 2018 growing season and were placed directly from the field into the germination trays. To re-establish microbial communities for those trays where the soil had been heat-treated, seeds were lightly covered with a small amount of untreated soil collected from the site in which they were buried. Untreated soil was collected from directly underneath coarse woody debris in patches where it was present as prior research in this system has shown that the effect of coarse woody debris on plant performance is partially attributable to debris-specific soil microbial communities (A. Pastore unpublished data). Some of the trays received the additions of leaf litter, but the results of this treatment were not included for the seed rates used in this study. Seed germination rate was measured by counting the number of seedlings which emerged in the field, but seed survival rate was not calculated in this experiment.
 
 
+        \subsection{References}
 
-
+        % Add Supps bibliography here!
 
 
 \section{Supplementary Results}
