adding bold to the new sections

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -246,9 +246,9 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
 
     \subsection{Dealing with sparse networks}
 
-    It is likely that the posterior distributions of some interaction estimates returned by the model will overlap with zero. We note that an overlap with zero may be due to several factors and does not necessarily equate to an interaction being insignificant. Firstly, an overlap with zero may arise when an interaction is positive or negative depending on local conditions. Secondly, it may indicate the interaction is poorly informed and hence overlaps with zero because it has a large posterior distribution since we cannot confidently speak to its effect. Lastly, the interaction may be well-informed and weak, in which case the posterior is centered around zero. 
+    \textbf{It is likely that the posterior distributions of some interaction estimates returned by the model will overlap with zero. We note that an overlap with zero may be due to several factors and does not necessarily equate to an interaction being insignificant. Firstly, an overlap with zero may arise when an interaction is positive or negative depending on local conditions. Secondly, it may indicate the interaction is poorly informed and hence overlaps with zero because it has a large posterior distribution since we cannot confidently speak to its effect. Lastly, the interaction may be well-informed and weak, in which case the posterior is centered around zero.}
 
-    If a user of our framework has good cause to believe that many interactions are weak and the network is sparse, there are many ways to deal with this issue... % Finish this paragraph when I know what's happening with Reviewer 1.
+    \textbf{If a user of our framework has good cause to believe that many interactions are weak and the network is sparse, there are many ways to deal with this issue...} % Finish this paragraph when I know what's happening with Reviewer 1.
 
     Here I can add a section on sparsity - how might we eliminate parameters if we have reasonable cause to think they are $0$? Various possibilities e.g. bayesian variable selection. Point readers towards possible directions and leave decision to future users because there are many schools of thought here. 
     Instead of removing parameter, sample from prior that is on 0!
@@ -431,8 +431,8 @@ The authors declare no competing interests.
     \subsection{Assessing parameter identifiability}
     \label{SI:identify}
 
-    We assess which interactions parameters are identifiable in the data\_prep.R file (lines 30-44) and store this information in the $Q$ matrix. To do so, we create a model matrix $X_i$ for each focal species $i$ which is made up of a column vector of 1's (representing the intercept) and the subset of neighbour abundances recorded for that focal species (one predictor aka neighbour species per column). We transform this matrix into its row-reduced echelon form $R_i$ using the rref() function from the pracma package \parencite{Borchers2022}. EXPLAIN WHAT rref MEANS. 
-    We then multiply $R_i$ by its transpose to get the symmetric matrix $Z_i$, which we can use to determine which predictors (rows) are linearly independent of all other predictors. Note that given $Z-i$ is symmetrical, this can also be done using the columns of $Z_i$. We ignore the first row (column) of $Z_i$ because it corresponds to the intercept which we always want to include. For every row (column) $k > 1$, it is linearly independent if that row (column) is a vector of $0$'s except for the k'th element. If this is true, the interaction parameter corresponding to that row is thus identifiable and we assign it a value of $1$ in the $i$'th row and $k-1$'th column of $Q$. Alternatively, the corresponding interaction parameter is given a value of $0$ in $Q$. Evaluating the $Z_i$ matrix of each focal species therefore allows us to construct the $Q$ matrix of inferrable parameters.
+    \textbf{We assess which interactions parameters are identifiable in the data\_prep.R file (lines 30-44) and store this information in the $Q$ matrix. To do so, we create a model matrix $X_i$ for each focal species $i$ which is made up of a column vector of 1's (representing the intercept) and the subset of neighbour abundances recorded for that focal species (one predictor aka neighbour species per column). We transform this matrix into its row-reduced echelon form $R_i$ using the rref() function from the pracma package \parencite{Borchers2022}. EXPLAIN WHAT rref MEANS. 
+    We then multiply $R_i$ by its transpose to get the symmetric matrix $Z_i$, which we can use to determine which predictors (rows) are linearly independent of all other predictors. Note that given $Z-i$ is symmetrical, this can also be done using the columns of $Z_i$. We ignore the first row (column) of $Z_i$ because it corresponds to the intercept which we always want to include. For every row (column) $k > 1$, it is linearly independent if that row (column) is a vector of $0$'s except for the k'th element. If this is true, the interaction parameter corresponding to that row is thus identifiable and we assign it a value of $1$ in the $i$'th row and $k-1$'th column of $Q$. Alternatively, the corresponding interaction parameter is given a value of $0$ in $Q$. Evaluating the $Z_i$ matrix of each focal species therefore allows us to construct the $Q$ matrix of inferrable parameters.}
 
 % We construct a matrix $Q$ of size $s \times t$, with $Q_{i, j} = 1$ if the corresponding $\beta_{i, j}$ parameter is identifiable, and $Q_{i, j} = 0$ if not.
 
