--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -158,7 +158,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     \label{meth:id_params}
 
     \paragraph{}
-    A common issue in observational datasets is that some species or elements may not be observed to interact with many other species or to interact at sufficiently variable densities because data sampling is limited in space and time. This can create a situation in which we cannot estimate all potential interaction parameters ($\beta_{i,j}$) in the NDDM specified above, especially for rare species $j$. For an interaction parameter to be \textit{identifiable}, and thus inferrable by the NDDM, the data must contain measurements of the performance of $i$ when interacting with $j$ at varying densities. Moreover, the vector of densities of $j$ associated with measurements of focal $i$ must be linearly independent to all other vectors of densities of other species interacting with $i$. For example, if two species $a$ and $b$ interact with focal $i$ yet have the same density at every measurement or equally proportional densities at every measurement, neither $\beta_{i, a}$ nor $\beta_{i, b}$ will be inferrable by the NDDM. We define \textit{identifiable} interactions as those which are inferrable following the above assumptions, and \textit{unidentifiable} interactions as those which are not. We construct a matrix $Q$ of size $s \times t$, with $Q_{i, j} = 1$ if the corresponding $\beta_{i, j}$ parameter is identifiable, and $Q_{i, j} = 0$ if not. How we verify linear independance between vectors of neighbour densities and mathematically construct this $Q$ matrix is shown in the code shared with the github repository associated to this paper.
+    A common issue in observational datasets is that some species or elements may not be observed to interact with many other species or to interact at sufficiently variable densities because data sampling is limited in space and time. This can create a situation in which we cannot estimate all potential interaction parameters ($\beta_{i,j}$) in the NDDM specified above, especially for rare species $j$. For an interaction parameter to be \textit{identifiable}, and thus inferrable by the NDDM, the data must contain measurements of the performance of $i$ when interacting with $j$ at varying densities. Moreover, the vector of densities of $j$ associated with measurements of focal $i$ must be linearly independent to all other vectors of densities of other species interacting with $i$. For example, if two species $a$ and $b$ interact with focal $i$ yet have the same density at every measurement or equally proportional densities at every measurement, neither $\beta_{i, a}$ nor $\beta_{i, b}$ will be inferrable by the NDDM. We define \textit{identifiable} interactions as those which are inferrable following the above assumptions, and \textit{unidentifiable} interactions as those which are not. We construct a matrix $Q$ of size $s \times t$, with $Q_{i, j} = 1$ if the corresponding $\beta_{i, j}$ parameter is identifiable, and $Q_{i, j} = 0$ if not. How we verify linear independance between vectors of neighbour densities and mathematically construct this $Q$ matrix is further described in the S. Methods Section \ref{SI:identify} and shown in the code shared with the github repository associated to this paper.
     
     \subsection{Unidentifiable parameters and the response--impact model}
     \label{meth:rim}
@@ -431,8 +431,9 @@ The authors declare no competing interests.
     \subsection{Assessing parameter identifiability}
     \label{SI:identify}
 
-    \textbf{We assess which interactions parameters are identifiable in the data\_prep.R file (lines 30-44) and store this information in the $Q$ matrix. To do so, we create a model matrix $X_i$ for each focal species $i$ which is made up of a column vector of 1's (representing the intercept) and the subset of neighbour abundances recorded for that focal species (one predictor aka neighbour species per column). We transform this matrix into its row-reduced echelon form $R_i$ using the rref() function from the pracma package \parencite{Borchers2022}. EXPLAIN WHAT rref MEANS. 
-    We then multiply $R_i$ by its transpose to get the symmetric matrix $Z_i$, which we can use to determine which predictors (rows) are linearly independent of all other predictors. Note that given $Z-i$ is symmetrical, this can also be done using the columns of $Z_i$. We ignore the first row (column) of $Z_i$ because it corresponds to the intercept which we always want to include. For every row (column) $k > 1$, it is linearly independent if that row (column) is a vector of $0$'s except for the k'th element. If this is true, the interaction parameter corresponding to that row is thus identifiable and we assign it a value of $1$ in the $i$'th row and $k-1$'th column of $Q$. Alternatively, the corresponding interaction parameter is given a value of $0$ in $Q$. Evaluating the $Z_i$ matrix of each focal species therefore allows us to construct the $Q$ matrix of inferrable parameters.}
+    \textbf{We assess which interactions parameters are identifiable in the data\_prep.R file (lines 30-44) and store this information in the $Q$ matrix. To do so, we create a model matrix $X_i$ for each focal species $i$ which is made up of a column vector of 1's (representing the intercept) and the subset of neighbour abundances recorded for that focal species (one predictor aka neighbour species per column). We transform this matrix into its row-reduced echelon form $R_i$ using the rref() function from the pracma package \parencite{Borchers2022}. We then multiply $R_i$ by its transpose to get the symmetric matrix $Z_i$, which we can use to determine which predictors (rows) are linearly independent of all other predictors. Note that given $Z-i$ is symmetrical, this can also be done using the columns of $Z_i$. We ignore the first row (column) of $Z_i$ because it corresponds to the intercept which we always want to include. For every row (column) $k > 1$, it is linearly independent if that row (column) is a vector of $0$'s except for the k'th element. If this is true, the interaction parameter corresponding to that row is thus identifiable and we assign it a value of $1$ in the $i$'th row and $k-1$'th column of $Q$. Alternatively, the corresponding interaction parameter is given a value of $0$ in $Q$. Evaluating the $Z_i$ matrix of each focal species therefore allows us to construct the $Q$ matrix of inferrable parameters.}
+
+    In a similar way, we also evaluate whether predictors (neighbours) are linearly independent across the entire dataset in order to be able to correctly distinguish between their respective effect parameters $e_j$ for the RIM. The same procedure as above is performed across the entire model matrix (without subsetting for each focal species) and neighbours are evaluated for linear independence. This is is done early on in the master.R file (lines 26-36) as a check before transforming the data into the format required by STAN. A lack of linear independence across the entire dataset is very unlikely, and would only arise if multiple neighbours' densities were perfectly correlated across all neighbourhoods.
 
 % We construct a matrix $Q$ of size $s \times t$, with $Q_{i, j} = 1$ if the corresponding $\beta_{i, j}$ parameter is identifiable, and $Q_{i, j} = 0$ if not.
 
