comment on sparsity expectations

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -173,7 +173,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
         \end{equation}
     %DBS: I commented out the sentence below because we still aren't "replacing" one parameter estimate with another until the next section. I don't think it makes sense as currently writren. Instead, I have clarified the benefit of the RIM after explaining the identifiability condition.
     %Pairwise interaction parameters which cannot be inferred from Eq.~\ref{nddm} can be approximated with Eq.~\ref{rim} by multiplying the relevant $r_{d_k}$ and $e_{j}$ such that $\beta_{d_k, j} = r_{d_k} e_{j}$.
-    To fit the RIM, the densities of species $j$ must be linearly independent to the densities of other species and/or combinations of species, but across the entire $X$ matrix. This is in contrast to \ref{meth:nddm} above, where the densities of $j$ must be linearly independent within the subset of observations for each focal $i$. Importantly, this is a less strict condition for parameter identifiability. As a result, it is possible to estimate pairwise interactions that would be unidentifiable given Eq.~\ref{nddm} by recognizing that pairwise density dependence in Eq.~\ref{rim} is given by $\beta_{i, j} = r_{i} e_{j}$.
+    To fit the RIM, the densities of species $j$ must be linearly independent to the densities of other species and/or combinations of species, but across the entire $X$ matrix. This is in contrast to \ref{meth:nddm} above, where the densities of $j$ must be linearly independent within the subset of observations for each focal $i$. Importantly, this is a less strict condition for parameter identifiability. As a result, it is possible to estimate pairwise interactions that would be unidentifiable given Eq.~\ref{nddm} by recognizing that pairwise density dependence in Eq.~\ref{rim} is given by $\beta_{i, j} = r_{i} e_{j}$. \textbf{As noted previously, the RIM makes different assumptions to the NDDM about how interactions are structured in horizontal system: species have singular responses and effects ... }.
 
 
     \subsection{Joining the two models}
@@ -248,7 +248,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
 
     \subsection{Dealing with sparse networks}
 
-    \textbf{It is likely that the posterior distributions of some interaction estimates returned by the model will overlap with zero. We note that an overlap with zero may be due to several factors and does not necessarily equate to an interaction being insignificant. Firstly, an overlap with zero may arise when an interaction is positive or negative depending on local conditions. Secondly, it may indicate the interaction is poorly informed and hence overlaps with zero because it has a large posterior distribution since we cannot confidently speak to its effect. Lastly, the interaction may be well-informed and weak, in which case the posterior is centered around zero.}
+    \textbf{In horizontal systems, interaction networks are expected to be non-sparse because species are typically assumed to interact via the same set of shared resources. Nonetheless, it is likely that the posterior distributions of some interaction estimates returned by the model will overlap with zero. We note that an overlap with zero may be due to several factors and does not necessarily equate to an interaction being insignificant. Firstly, an overlap with zero may arise when an interaction is positive or negative depending on local conditions. Secondly, it may indicate the interaction is poorly informed and hence overlaps with zero because it has a large posterior distribution since we cannot confidently speak to its effect. Lastly, the interaction may be well-informed and weak, in which case the posterior is centered around zero.}
 
     \textbf{If a user of our framework has good cause to believe that many interactions are weak and the network is sparse, there are many ways to deal with this issue...} % Finish this paragraph when I know what's happening with Reviewer 1.
 
