adding more comments on sparsity

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -247,6 +247,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
         STAN returns parameters as distributions which maximise the likelihood, and are conditioned by the data and priors. Priors describe the distribution of plausible values which these parameters may take. For an introduction to Bayesian inference which relates the use of priors to frequentist hypothesis testing, see \textcite{Ellison1996}. We recommend investigators experiment with setting different informed priors to both improve model convergence and verify the robustness of parameter estimates. The resulting parameters are termed posterior distributions, and samples from the posterior are drawn for analysis. Using parameter distributions rather than point estimates allows for easy inclusion of uncertainty in the analysis of results, we therefore recommend bootstrap sampling from each posterior interaction strength distribution to create multiple samples of the community interaction matrix. \textcite{Ellison2004} also provides an accessible review of parameter estimates and the use of posterior distributions using a worked example on ant species richness data.
 
     \subsection{Dealing with sparse networks}
+    \label{meth:sparse}
 
     \textbf{In horizontal systems, interaction networks are expected to be non-sparse because species are typically assumed to interact via the same set of shared resources. Nonetheless, it is likely that the posterior distributions of some interaction estimates returned by the model will overlap with zero. We note that an overlap with zero may be due to several factors and does not necessarily equate to an interaction being insignificant. Firstly, an overlap with zero may arise when an interaction is positive or negative depending on local conditions. Secondly, it may indicate the interaction is poorly informed and hence overlaps with zero because it has a large posterior distribution since we cannot confidently speak to its effect. Lastly, the interaction may be well-informed and weak, in which case the posterior is centered around zero.}
 
@@ -276,7 +277,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM.  When accounting for interactions between focal species only, 82.0\% of interactions were identifiable. We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Figure \ref{fig:ppcheckmu2}), this is especially important for verifying that the appropriate distribution and link function are being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (Supplementary Results \ref{SI:results} Figure \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. Interaction estimates were scaled according to focal intrinsic fitness into interaction strengths comparable between focal species, and we applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the scaled community interaction matrix.
 
     \paragraph{}
-    For our case study, the resulting community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction  across all samples. Overall, 63.6\% of focal species had a median interspecific interaction strength which was competitive, making competition the dominant interaction type. The median value of 46.7\% of focal $\times$ neighbour interactions , however, were facilitative, as were the medians of 43.3\% of all focal $\times$ focal interactions. As a result, 47.6\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates it's own performance. For 11 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species.
+    For our case study, the resulting community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction  across all samples. Overall, 63.6\% of focal species had a median interspecific interaction strength which was competitive, making competition the dominant interaction type. The median value of 46.7\% of focal $\times$ neighbour interactions , however, were facilitative, as were the medians of 43.3\% of all focal $\times$ focal interactions. As a result, 47.6\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates it's own performance. For 11 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species. \textbf{This stands in contrast to interspecific interactions, for which only 19.5\% did not overlap with 0 when considering all neighbours. It is reasonable to assume that many of those interactions were poorly informed especially with those rarer neighbours (see Methods \ref{meth:sparse}), and indeed the proportion of interspecific interactions with do not overlap with 0 jumps to 32.3\% when considering focal species only.}
 
 
     %\paragraph{}
@@ -305,7 +306,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
 
 
     \paragraph{} 
-    Our novel framework quantifies the effects of interacting species and reciprocal performance, allowing the estimation of diverse, horizontal interaction matrices. The resulting matrices are non-symmetrical and can contain both positive and negative interactions, as well as the effect of a species on itself. This framework is flexible to metrics of performance, group identity (e.g.\ species, population, etc.) and diversity. We also propose a way to estimate unidentifiable interactions from those which are identifiable. The matrices generated through this framework can be transformed into interaction networks through the use of further models describing the system's interaction dynamics. These features make it particularly useful in an ecological context, as illustrated in our case study on a diverse wildflower community, as well as flexible for use with data from the wide range of complex systems dominated by horizontal interactions.
+    Our novel framework quantifies the effects of interacting species and reciprocal performance, allowing the estimation of diverse, horizontal interaction matrices. The resulting matrices are non-symmetrical and can contain both positive and negative interactions, as well as the effect of a species on itself. This framework is flexible to metrics of performance, group identity (e.g.\ species, population, etc.) and diversity. We also propose a way to estimate unidentifiable interactions from those which are identifiable, \textbf{which is a significant feature given that networks for horizontal systems are expected to be non-sparse}. The matrices generated through this framework can be transformed into interaction networks through the use of further models describing the system's interaction dynamics. These features make it particularly useful in an ecological context, as illustrated in our case study on a diverse wildflower community, as well as flexible for use with data from the wide range of complex systems dominated by horizontal interactions.
 
     \paragraph{}
     Here, we illustrate the unique useful features of this framework using a typical plant-dominated ecological system for context. In our case study, we show how wildflower species are linked through  plant-plant interaction networks. In turn, this network can help us identify what roles specific species play within a community, and explore how the mechanisms maintaining diversity and stability operate in these systems. By estimating the effects of species on each other's performance, and subsequently their population growth and patterns of density, our method stands in contrast to association networks and returns qualitatively different information. There are a wide range of association network frameworks used in ecology \parencite{Burns2010, Losapio2018, Montesinos-Navarro2018} and collectively, they are a common alternative to estimating interaction networks in high-diversity systems as they capture spatial associations between species (e.g.\ \cite{Saiz2018}) and require easier-to-obtain data. Association networks also benefit from easy implementation with a wide range of packages in R (e.g.\ \cite{Griffith2016}) though the resulting networks are typically symmetrical and cannot capture a species' effect on itself. Moreover, association networks remain poor predictors of species interactions and rarely match empirical estimates \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
