emphasise link to pop dyn model

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -87,11 +87,12 @@ Data will be submitted to Dryad upon publication.
     
     \begin{enumerate}
     \item{Network theory allows us to understand complex systems by evaluating how their constituent elements interact with one another. Such networks are built from matrices which describe the effect of each element on all others. Quantifying the strength of these interactions from empirical data can be difficult, however, because the number of potential interactions increases non-linearly as more elements are included in the system, and not all interactions may be empirically observable when some elements are rare.}
-    \item{We present a novel modelling framework which estimates the strength of pairwise interactions in diverse horizontal systems, using measures of species performance in the presence of varying densities of their potential interaction partners.}
+    \item{We present a novel modelling framework which estimates the strength of pairwise interactions in diverse horizontal systems, using measures of species performance in the presence of varying densities of their potential interaction partners. \textbf{We show how to link this framework to a population dynamics model to make inferences about the effect of interactions on community dynamics and diversity.}}
     \item{Our method allows us to directly estimate pairwise effects when they are statistically identifiable and approximate pairwise effects when they would otherwise be statistically unidentifiable. The resulting interaction matrices can include positive and negative effects, the effect of a species on itself, and are non-symmetrical.} 
     \item{The advantages of these features are illustrated with a case study on an annual wildflower community of 22 focal and 52 neighbouring species, and a discussion of potential applications of this framework extending well beyond plant community ecology.}
 \end{enumerate}
-% Abstract = 192 words
+% Abstract = 217 words
+% 350 word limit for MEE
 
 \begin{refsection}
 
@@ -109,7 +110,7 @@ Data will be submitted to Dryad upon publication.
     %% [Keep this if I have enough spare words]
 
     \paragraph{} 
-    In many horizontal systems, interactions between species are not always easy to observe empirically and must instead be deduced through other means. A common approach in ecology is to directly quantify the effects of interacting species on the species of interest by evaluating its performance in the absence and presence of potential interaction partners \parencite{Connell1961, Grace1990}. `Performance' can refer to any variable of interest that affects the dynamics of the system, for example quantity of resources gathered, biomass, or population growth rate. The resulting interactions are phenomenological and thus not dependent on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of species $S$ increases and the number of potential direct interactions subsequently increases to $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different species is typically skewed, with a few species making up the majority of abundances and a large number of elements remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer species especially may not be observed simply by chance. We thus run the risk of excluding them from analyses regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method that is flexible to both a high number of species, and potential gaps in our records of interactions. 
+    In many horizontal systems, interactions between species are not always easy to observe empirically and must instead be deduced through other means. A common approach in ecology is to directly quantify the effects of interacting species on the species of interest by evaluating its performance in the absence and presence of potential interaction partners \parencite{Connell1961, Grace1990}. `Performance' can refer to any variable of interest that affects the dynamics of the system, for example quantity of resources gathered, biomass, or population growth rate. \textbf{Measuring species interactions as effects on performance allows us to infer future population trajectories through the use of population dynamics models, and thus draw conclusions about the effects of interactions on potential coexistence and diversity \parencite{Laska1998}.} The resulting interactions are phenomenological and thus not dependent on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of species $S$ increases and the number of potential direct interactions subsequently increases to $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different species is typically skewed, with a few species making up the majority of abundances and a large number of elements remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer species especially may not be observed simply by chance. We thus run the risk of excluding them from analyses regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method that is flexible to both a high number of species, and potential gaps in our records of interactions. 
 
 
     \paragraph{} 
@@ -171,9 +172,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
         f(p_{k}) = \gamma_{d_k} - r_{d_k} \sum_{j=1}^{t} e_{j} X_{d_k, j}
         \label{rim}
         \end{equation}
-    %DBS: I commented out the sentence below because we still aren't "replacing" one parameter estimate with another until the next section. I don't think it makes sense as currently writren. Instead, I have clarified the benefit of the RIM after explaining the identifiability condition.
-    %Pairwise interaction parameters which cannot be inferred from Eq.~\ref{nddm} can be approximated with Eq.~\ref{rim} by multiplying the relevant $r_{d_k}$ and $e_{j}$ such that $\beta_{d_k, j} = r_{d_k} e_{j}$.
-    To fit the RIM, the densities of species $j$ must be linearly independent to the densities of other species and/or combinations of species, but across the entire $X$ matrix. This is in contrast to \ref{meth:nddm} above, where the densities of $j$ must be linearly independent within the subset of observations for each focal $i$. Importantly, this is a less strict condition for parameter identifiability. As a result, it is possible to estimate pairwise interactions that would be unidentifiable given Eq.~\ref{nddm} by recognizing that pairwise density dependence in Eq.~\ref{rim} is given by $\beta_{i, j} = r_{i} e_{j}$. \textbf{As noted previously, the RIM makes different assumptions to the NDDM about how interactions are structured in horizontal system: species have singular responses and effects ... }.
+    To fit the RIM, the densities of species $j$ must be linearly independent to the densities of other species and/or combinations of species, but across the entire $X$ matrix. This is in contrast to \ref{meth:nddm} above, where the densities of $j$ must be linearly independent within the subset of observations for each focal $i$. Importantly, this is a less strict condition for parameter identifiability. As a result, it is possible to estimate pairwise interactions that would be unidentifiable given Eq.~\ref{nddm} by recognizing that pairwise density dependence in Eq.~\ref{rim} is given by $\beta_{i, j} = r_{i} e_{j}$. \textbf{Readers should note that this step makes different assumptions on the structure of interactions in nature, specifically that species tend to have a generalisable effect on and response to neighbours regardless of neighbour identity. This stands in contrast to the NDDM, which assumes a unique parameter for every interaction. Such simplification is useful from a statistical point of view in order to infer unidentifiable interactions, but its ecological significance should not be dismissed.}
 
 
     \subsection{Joining the two models}
@@ -312,7 +311,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     Here, we illustrate the unique useful features of this framework using a typical plant-dominated ecological system for context. In our case study, we show how wildflower species are linked through  plant-plant interaction networks. In turn, this network can help us identify what roles specific species play within a community, and explore how the mechanisms maintaining diversity and stability operate in these systems. By estimating the effects of species on each other's performance, and subsequently their population growth and patterns of density, our method stands in contrast to association networks and returns qualitatively different information. There are a wide range of association network frameworks used in ecology \parencite{Burns2010, Losapio2018, Montesinos-Navarro2018} and collectively, they are a common alternative to estimating interaction networks in high-diversity systems as they capture spatial associations between species (e.g.\ \cite{Saiz2018}) and require easier-to-obtain data. Association networks also benefit from easy implementation with a wide range of packages in R (e.g.\ \cite{Griffith2016}) though the resulting networks are typically symmetrical and cannot capture a species' effect on itself. Moreover, association networks remain poor predictors of species interactions and rarely match empirical estimates \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
 
     \paragraph{}
-    Species interaction networks have a wide range of practical applications, such as evaluating ecosystem response to human-altered landscapes, guiding future management decisions \parencite{Ross2011} or exploring how communities may respond to global warming \parencite{Gorman2019}. Conservation and ecosystem management efforts aimed at regulating species abundances can, for example, use the information provided by an interaction network to prioritise which species to conserve or eradicate based on their role in the community. Such roles can be deduced by a species' position in the interaction network \parencite{Cirtwill2018a} and as illustrated in our case study. Identifying keystone, foundation and other important types of species roles is also helpful for understanding biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019}. The examples we describe in our case study are not exhaustive, but serve to illustrate how interaction networks can help us understand both community dynamics overall and the effects \& response of specific species towards the community. 
+    Species interaction networks have a wide range of practical applications, such as evaluating ecosystem response to human-altered landscapes, guiding future management decisions \parencite{Ross2011} or exploring how communities may respond to global warming \parencite{Gorman2019}. Conservation and ecosystem management efforts aimed at regulating species abundances can, for example, use the information provided by an interaction network to prioritise which species to conserve or eradicate based on their role in the community. Such roles can be deduced by a species' position in the interaction network \parencite{Cirtwill2018a} and as illustrated in our case study \textbf{on a horizontal system}. Identifying keystone, foundation and other important types of species roles is also helpful for understanding biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019} \textbf{though often requires the inclusion of other trophic levels}. The examples we describe in our case study are not exhaustive, but serve to illustrate how interaction networks can help us understand both community dynamics overall and the effects \& response of specific species towards the community. 
 
     \paragraph{}
     Quantifying the matrix of scaled interaction strengths between species in horizontal communities can also allow us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another. Whereas same-species effects cannot be estimated by association networks, our framework quantifies intraspecific interactions and allows us to measure the strength and prevalence of competitive and facilitative density-dependence. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}); weak interactions between species suggest that they are not sharing or competing for many resources, and thus may have large niche differences in the community. %Strong competitive self-regulation, and weak interactions between two species, are two of many mechanisms leading to stability and diversity in plant communities.
